# solar-irrigator-hub

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/CJSON/: CMakeLists.txt
components/blufi_manager/: CMakeLists.txt  blufi_init.c  blufi_manager.c  blufi_manager.h  blufi_security.c
components/button_manager/: CMakeLists.txt  button_manager.c
components/detector_manager/: CMakeLists.txt  detector_manager.c  detector_manager.h
components/esfera_manager/: CMakeLists.txt  esfera_manager.c  esfera_manager.h
components/mqtt_manager/: CMakeLists.txt  mqtt_manager.c  mqtt_manager.h
components/time_sync/: CMakeLists.txt  time_sync.c  time_sync.h
main/: CMakeLists.txt  hub_station.c  hub_station.h
